# AnyGPT

./: .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  CODEBASE_REVIEW.md  README.md  SETUP.md  bun.sh  dev.nix  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
.husky/: pre-commit
.idx/: dev.nix
.roo/: mcp.json
apps/anyscan/: Cargo.toml  anyscan-api.service  anyscan-worker.service  deploy.sh  index.html  install-external-deps.sh  local-bootstrap-provisioner.json  local-bootstrap-provisioner.py  public-site.html  vulnscanner-zmap-adapter.json  vulnscanner-zmap-adapter.py
apps/anyscan/src/: config.rs  core.rs  detectors.rs  dragonfly_store.rs  fetcher.rs  lib.rs  ops.rs  public_verification.rs  store.rs
apps/api/: .env.example  .env.test  README.md  anygpt-api.service  anygpt-experimental.service  anygpt.service  dragonfly-anygpt.flags.example  excluded-errors.json  keys.json  models.json  models.schema.json  openapi.json  package.json  pricing.json  providers.schema.json  server.bun.ts  server.launcher.bun.ts  server.ts  setup.js  tiers.json  (+1 more)
plans/: 2026-04-07-anyscan-rust-parity-layout-v1.md  2026-04-10-autonomous-health-timeout-investigation-v1.md  2026-04-12-investigate-slow-code-production-v1.md  bun-runtime-handoff.md  langgraph-control-plane-improvements.md  tool-calling.md
scripts/: control-plane-autonomous-runner-exec.sh  control-plane-autonomous-runner.sh  run-frontend-stack.sh  sync-copilot-anygpt-credentials.mjs  with-bun-path.sh
(+173 files in other folders)
