[package]
name = "anyscan"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
jsonwebtoken = "9.3"
once_cell = "1.21"
redis = { version = "1.2", features = ["tls-rustls", "streams"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
time = "0.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5", features = ["serde"] }
